feat: add cleanup logic to remove stale custom formats / quality profiles
